// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shades DOM Renders without incident 1`] = `
<Shades.Provider
  to={
    <head>
      <style
        data-shades=""
      />
    </head>
  }
>
  <Component
    to={
      <head>
        <style
          data-shades=""
        />
      </head>
    }
  >
    <pure(getContext(shades.h1))
      dark={true}
    >
      <getContext(shades.h1)
        dark={true}
      >
        <shades.h1
          dark={true}
          targetDom={
            <head>
              <style
                data-shades=""
              />
            </head>
          }
        >
          <h1
            className="__shades-element shades-h1-229e27bf4f232311c23181b9c2eaf3fb287c58f6"
          >
            Hello
          </h1>
        </shades.h1>
      </getContext(shades.h1)>
    </pure(getContext(shades.h1))>
  </Component>
</Shades.Provider>
`;

exports[`Shades DOM renders a block matcher without incident 1`] = `
<Shades.Provider
  to={
    <head>
      <style
        data-shades=""
      />
    </head>
  }
>
  <Component
    to={
      <head>
        <style
          data-shades=""
        />
      </head>
    }
  >
    <pure(getContext(shades.a))
      dark={true}
    >
      <getContext(shades.a)
        dark={true}
      >
        <shades.a
          dark={true}
          targetDom={
            <head>
              <style
                data-shades=""
              />
            </head>
          }
        >
          <a
            className="__shades-element shades-a-2e5a42365d82c7afb910df11f4f4a210fd7b6a61"
          >
            Hello
          </a>
        </shades.a>
      </getContext(shades.a)>
    </pure(getContext(shades.a))>
  </Component>
</Shades.Provider>
`;

exports[`Shades DOM renders a block matcher without incident 2`] = `
<Shades.Provider
  to={
    <head>
      <style
        data-shades=""
      />
    </head>
  }
>
  <Component
    to={
      <head>
        <style
          data-shades=""
        />
      </head>
    }
  >
    <pure(getContext(shades.a))>
      <getContext(shades.a)>
        <shades.a
          targetDom={
            <head>
              <style
                data-shades=""
              />
            </head>
          }
        >
          <a
            className="__shades-element shades-a-04e364fd62e2ed558a4f6cf657ba7f4287a09c02"
          >
            No Props!
          </a>
        </shades.a>
      </getContext(shades.a)>
    </pure(getContext(shades.a))>
  </Component>
</Shades.Provider>
`;

exports[`Shades DOM should allow styles to apply to custom components 1`] = `
<Shades.Provider
  to={
    <head>
      <style
        data-shades=""
      />
    </head>
  }
>
  <Component
    to={
      <head>
        <style
          data-shades=""
        />
      </head>
    }
  >
    <pure(getContext(shades.dee023e4d80ad9623adf0436ba85a175))>
      <getContext(shades.dee023e4d80ad9623adf0436ba85a175)>
        <shades.dee023e4d80ad9623adf0436ba85a175
          targetDom={
            <head>
              <style
                data-shades=""
              />
            </head>
          }
        >
          <Component
            className="__shades-element shades-dee023e4d80ad9623adf0436ba85a175-f5e7f954ecb35943b1a33db3c54c666f41c748c9"
          >
            <div>
              Hello this is a test
            </div>
          </Component>
        </shades.dee023e4d80ad9623adf0436ba85a175>
      </getContext(shades.dee023e4d80ad9623adf0436ba85a175)>
    </pure(getContext(shades.dee023e4d80ad9623adf0436ba85a175))>
  </Component>
</Shades.Provider>
`;
